# uvwa

./: .gitignore  README.md
uvwa-rs/: .gitignore  Cargo.toml  README.md
uvwa-rs/resources/: application.yaml
uvwa-rs/resources/locales/: en.toml  zh.toml
uvwa-rs/resources/mappers/: app.xml  folder.xml  user.xml  workspace.xml  workspace_folder.xml  workspace_tag.xml
uvwa-rs/resources/static/: index.html
uvwa-rs/sql/: init.sql
uvwa-rs/src/: config.rs  main.rs  routes.rs
uvwa-rs/src/business/: mod.rs
uvwa-rs/src/business/app/: app_dao.rs  app_handler.rs  mod.rs
uvwa-rs/src/business/cache/: mod.rs  workspace_cache.rs
uvwa-rs/src/business/folder/: folder_dao.rs  folder_handler.rs  mod.rs
uvwa-rs/src/business/tag/: mod.rs  tag_dao.rs  tag_handler.rs
uvwa-rs/src/business/user/: mod.rs  user_dao.rs  user_handler.rs
uvwa-rs/src/business/workspace/: mod.rs  workspace_consumer.rs  workspace_dao.rs  workspace_handler.rs
uvwa-rs/src/business/workspace_folder/: folder_dao.rs  folder_handler.rs  folder_subscription.rs  mod.rs
uvwa-rs/src/business/workspace_tag/: tag_dao.rs  tag_handler.rs
uvwa-rs/src/core/: constants.rs  mod.rs  subscription.rs
uvwa-rs/src/models/: app.rs  context.rs  folder.rs  mod.rs  tag.rs  user.rs  workspace.rs  workspace_folder.rs  workspace_tag.rs
uvwa-rs/src/utils/: id.rs
uvwa-rs/src/web/: code.rs  error.rs  extract.rs  mod.rs  r.rs  server.rs  ts_str.rs
uvwa-rs/src/web/middleware/: auth.rs  fallback.rs  i18n.rs  mod.rs
uvwa-web/: .umirc.ts  package.json  routes.ts
uvwa-web/mock/: datasource.ts  flow.ts  workspace.ts
(+126 files in other folders)
